<resources>
    <string name="app_name">My-Appointments</string>
    <string name="label_login">Inicio de Sesion</string>

    <string name="label_email">Correo</string>
    <string name="label_password">Password</string>

    <string name="label_btn_login">Ingresar 👍</string>
    <string name="label_go_to_register">Aun no te has Registrado? 🤷‍♂️</string>

    <string name="label_register">Registro</string>
    <string name="label_user_name">Nombre Completo</string>
    <string name="label_btn_register">Registrar</string>
    <string name="label_go_to_login">Ya tienes una cuenta ?</string>
    <string name="label_message">Por favor compelta los datos</string>

    <string name="label_welcome">Bienvenido</string>
    <string name="label_btn_create_appointment">➕ Crear Cita</string>
    <string name="label_btn_myAppointments">📓 Mis Citas</string>
    <string name="label_btn_logOut">⛔ Cerrar sesion</string>


    <string name="label_create_appointment">Reservar cita</string>
    <string name="label_DescAppointment">Descripcion 📝</string>
    <string name="label_Specialty">Especialidad 📑</string>
    <string name="label_scheduleTime">Hora ⌚</string>
    <string name="label_AppointmentType">Tipo de Cita 🀄</string>
    <string name="AppointementType1">Consulta</string>
    <string name="AppointementType2">Analisis Clinicos</string>
    <string name="AppointementType3">Cirugia</string>
    <string name="validate_appointment_description">La descripcion es demasiado corta</string>
    <string name="label_btn_next">Siguiente</string>
    <string name="label_doctor">Doctor 👨‍⚕️</string>
    <string name="label_scheduleDate">📅 Fecha</string>
    <string name="label_btn_Confirm">Cormirmar Cita</string>

    <string name="date_fromat">%1$d-%2$s-%3$s</string>

    <string name="item_Apppointment_id">Cita medica %1$d</string>
    <string name="item_Apppointment_date">El dia %1$s</string>
    <string name="item_Apppointment_time">A las: %1$s</string>
    <string name="my_appointements_tittle">Mi Citas Medicas</string>
    <string name="press_back_again">Presiona una vez mas para salir</string>
    <string name="dialog_create_appointment_exit_title">Esta sseguro que deseas Salir ?</string>
    <string name="dialog_create_appointment_exit_message">Si abandonas el resgitro los dtos ue has puesto se perderam!
    </string>
    <string name="dialog_create_appointment_exit_positive_btn">Si, salir</string>
    <string name="dialog_create_appointment_exit_negative_btn">Continuar Registro</string>
    <string name="label_schedule_time">Hora de la cita medica</string>
    <string name="label_confirmed_appointment_data">Datos de la Cita</string>
    <string name="validate_appointment_date">Debes seleccionar una fecha</string>
    <string name="validate_appointment_time">Selecciona una hora</string>
    <string name="error_loading_doctors">Ocurrio un problema al cargar los medicos</string>
    <string name="label_select_doctor_date">Seleccione un medico y una fecha para ver sus horas disponibles</string>
    <string name="label_hours_not_abilable">No se han encontrado horas para el medico y fecha seleccionados</string>

</resources>
