<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.CreateAppointmentActivity"
        android:id="@+id/cvStep1"
        app:contentPadding="12dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <TextView
                android:text="@string/label_DescAppointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"/>

        <EditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:text="@string/label_Specialty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"/>
        <Spinner
                android:id="@+id/spinnerSpecialty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

        </Spinner>

        <TextView
                android:text="@string/label_AppointmentType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"/>

        <RadioGroup
                android:id="@+id/radioGrouptype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="8dp"
                android:checkedButton="@id/rdbtnType1">

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/AppointementType1"
                    android:id="@+id/rdbtnType1"/>
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AppointementType2"
                    android:id="@+id/rdbtnType2"/>
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AppointementType3"
                    android:id="@+id/rdbtnType3"/>

        </RadioGroup>


        <Button
                android:id="@+id/btnNext"
                android:layout_marginTop="18dp"
                android:layout_width="match_parent"
                android:drawableEnd="@drawable/ic_navigate_next_black_24dp"
                style="@style/MenuButton"
                android:text="@string/label_btn_next"/>


    </LinearLayout>

</android.support.v7.widget.CardView>



