<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/db_gradient"
        android:gravity="center"
        android:padding="16dp"
        tools:context=".MenuActivity">

    <TextView
            android:paddingTop="12dp"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_height="60dp"
            android:textColor="@color/white"
            android:text="@string/label_welcome"
            android:textSize="16sp"/>


    <Button
            android:id="@+id/btnCreateAppointment"
            android:layout_marginTop="18dp"
            android:layout_width="match_parent"
            style="@style/MenuButton"
            android:text="@string/label_btn_create_appointment"/>
    <Button
            android:id="@+id/btnMyAppointments"
            android:layout_marginTop="18dp"
            android:layout_width="match_parent"
            style="@style/MenuButton"
            android:text="@string/label_btn_myAppointments"/>

    <Button
            android:id="@+id/btnLogOut"
            android:layout_marginTop="18dp"
            android:layout_width="match_parent"
            style="@style/MenuButton"
            android:text="@string/label_btn_logOut"/>



</LinearLayout>