<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <TextView
            android:paddingTop="12dp"
            android:background="@drawable/db_gradient"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/label_login"
            android:textSize="16sp"/>

    <LinearLayout
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            android:padding="14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_marginTop="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/label_email"/>

        <EditText
                android:textColor="@color/white"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_marginTop="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/label_password"/>

        <EditText
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/btnLogin"
                android:layout_marginTop="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/label_btn_login"/>

        <TextView
                android:id="@+id/tvGoToRegister"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:text="@string/label_go_to_register"/>
    </LinearLayout>


</LinearLayout>