<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/db_gradient"
        android:gravity="center"
        android:padding="16dp"
        tools:context=".CreateAppointmentActivity">

    <TextView
            android:paddingTop="12dp"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_height="60dp"
            android:textColor="@color/white"
            android:text="@string/label_create_appointment"
            android:textSize="16sp"/>

    <android.support.v7.widget.CardView

            android:id="@+id/cvStep1"
            app:contentPadding="12dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



            <TextView
                    android:text="@string/label_DescAppointment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:text="@string/label_Specialty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"/>
            <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

            </Spinner>

            <TextView
                    android:text="@string/label_AppointmentType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"/>

            <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="8dp">

                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/AppointementType1"
                        android:id="@+id/rdbtnType1"/>
                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/AppointementType2"
                        android:id="@+id/rdbtnType2"/>
                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/AppointementType3"
                        android:id="@+id/rdbtnType3"/>

            </RadioGroup>


            <Button
                    android:id="@+id/btnNext"
                    android:layout_marginTop="18dp"
                    android:layout_width="match_parent"
                    android:drawableEnd="@drawable/ic_navigate_next_black_24dp"
                    style="@style/MenuButton"
                    android:text="@string/label_btn_next"/>


        </LinearLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView

            android:visibility="gone"
            android:id="@+id/cvStep2"
            app:contentPadding="12dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_marginTop="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_doctor"/>

                <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                </Spinner>

                <TextView
                        android:layout_marginTop="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_scheduleDate"/>

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginBottom="8dp">

                    <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="8:00 Am"
                            android:id="@+id/rdbtnType0"/>
                    <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="8:30 AM"
                            android:id="@+id/rdbtnType02"/>
                    <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="9:00 AM"
                            android:id="@+id/rdbtnType03"/>
                    <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="9:30 AM"/>
                    <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="10:00 AM"/>
                    <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="10:30 AM"/>
                    <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="11:00 Am"/>
                    <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="11:30 AM"/>
                    <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="03:00 PM"/>
                    <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="03:30 PM"/>
                    <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="04:00 PM"/>
                    <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="04:30 PM"/>
                    <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="05:00 PM"/>

                </RadioGroup>

                <Button
                        android:id="@+id/btnConfirmAppointment"
                        android:layout_marginTop="18dp"
                        android:layout_width="match_parent"
                        android:drawableEnd="@drawable/ic_check_black_24dp"
                        style="@style/MenuButton"
                        android:text="@string/label_btn_Confirm"/>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>


    </android.support.v7.widget.CardView>

</LinearLayout>