<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.CreateAppointmentActivity"

        android:id="@+id/cvStep3"
        android:visibility="gone"
        app:contentPadding="12dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        //principal Linear
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/label_confirmed_appointment_data"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <LinearLayout
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/label_Specialty"/>
                <TextView
                        android:id="@+id/tvConfirmSpecialty"
                        tools:text="Oftalmologia"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/label_DescAppointment"/>
                <TextView
                        android:id="@+id/tvConfirmDesc"
                        tools:text="Cita para revison"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/label_AppointmentType"/>
                <TextView
                        android:id="@+id/tvConfirmType"
                        tools:text="Consulta"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView

                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/label_doctor"/>
                <TextView
                        android:id="@+id/tvConfirmDcotorName"
                        tools:text="Medico Test"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView

                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/label_scheduleDate"/>

                <TextView
                        android:id="@+id/tvConfirmDate"
                        tools:text="2019-12-12"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

            </LinearLayout>


            <LinearLayout
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView

                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/label_schedule_time"/>

                <TextView
                        android:id="@+id/tvConfirmTime"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        tools:text="4:30 PM"/>


            </LinearLayout>

            <Button
                    android:id="@+id/btnConfirmAppointment"
                    android:layout_marginTop="18dp"
                    android:layout_width="match_parent"
                    android:drawableEnd="@drawable/ic_check_black_24dp"
                    style="@style/MenuButton"
                    android:text="@string/label_btn_Confirm"/>

        </LinearLayout>
        //end Principal

    </android.support.v4.widget.NestedScrollView>


</android.support.v7.widget.CardView>


