<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.CreateAppointmentActivity"
        android:id="@+id/cvStep2"
        android:visibility="gone"
        app:contentPadding="12dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_doctor"/>

            <Spinner
                    android:id="@+id/sipinnerDoctor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

            </Spinner>

            <TextView
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_scheduleDate"/>

            <EditText
                    android:id="@+id/edtScheduleDate"
                    android:onClick="onClickScheduleDate"
                    android:inputType="date"
                    android:focusable="false"
                    android:clickable="true"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <LinearLayout
                        android:id="@+id/radioGroupLeft"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginBottom="8dp">

                    <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="8:00 Am"/>
                    <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="9:00 Am"/>


                </LinearLayout>

                <LinearLayout
                        android:id="@+id/radioGroupRight"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginBottom="8dp">

                    <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="8:00 Am"/>
                    <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="9:00 Am"/>


                </LinearLayout>

            </LinearLayout>

            <Button
                    android:id="@+id/btnNext2"
                    android:layout_marginTop="18dp"
                    android:layout_width="match_parent"
                    android:drawableEnd="@drawable/ic_navigate_next_black_24dp"
                    style="@style/MenuButton"
                    android:text="@string/label_btn_next"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</android.support.v7.widget.CardView>

